# stackscall

./: Cargo.toml  Makefile  README.md  note
contracts/: Cargo.toml
contracts/src/: callercontract.rs  targetcontract.rs
