[package]
name = "contracts"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casper-contract = "1.4"
casper-types = "1.4"

[[bin]]
name = "callercontract"
path = "src/callercontract.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "targetcontract"
path = "src/targetcontract.rs"
test = false
doctest = false
bench = false